welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:5: error: not found: value test0
    if (nums(l)>test0){
                ^